Testing Kali Rolling

--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,7 @@ env:
     - DOCKERFILE=Dockerfile
     - DOCKERFILE=Dockerfile.debian
     - DOCKERFILE=Dockerfile.fedora
+    - DOCKERFILE=Dockerfile.kali
 before_install:
     - curl -fsSL https://download.docker.com/linux/ubuntu/gpg | sudo apt-key add -
     - sudo add-apt-repository "deb [arch=amd64] https://download.docker.com/linux/ubuntu $(lsb_release -cs) stable"
