--- a/Dockerfile.kali
+++ b/Dockerfile.kali
@@ -2,7 +2,9 @@ FROM kalilinux/kali-linux-docker
 
 ARG DEBIAN_FRONTEND=noninteractive
 
-RUN apt update && apt dist-upgrade -y && \
+# Forcing this repo for now since Travis' kali repo has been crapping out.
+RUN echo deb http://http.kali.org/kali kali-rolling main contrib non-free > /etc/apt/sources.list && \
+    apt update && apt dist-upgrade -y && \
     apt install -y python3 python3-pip && \
     useradd -m -s /bin/bash stegoveritas && \
     mkdir -p /opt
