Officially adding parrot OS support

--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,7 @@ env:
     - DOCKERFILE=Dockerfile.debian
     - DOCKERFILE=Dockerfile.fedora
     - DOCKERFILE=Dockerfile.kali
+    - DOCKERFILE=Dockerfile.parrot
 before_install:
     - curl -fsSL https://download.docker.com/linux/ubuntu/gpg | sudo apt-key add -
     - sudo add-apt-repository "deb [arch=amd64] https://download.docker.com/linux/ubuntu $(lsb_release -cs) stable"
