--- a/Dockerfile.fedora
+++ b/Dockerfile.fedora
@@ -2,6 +2,7 @@ FROM fedora:latest
 
 RUN yum update -y && \
     yum install -y python3 python3-pip && \
+    python3 -m pip install -U setuptools pip && \
     useradd -m -s /bin/bash stegoveritas && \
     mkdir -p /opt
 
