--- a/Dockerfile.ubuntu.focal
+++ b/Dockerfile.ubuntu.focal
@@ -4,6 +4,7 @@ ARG DEBIAN_FRONTEND=noninteractive
 
 RUN apt update && apt dist-upgrade -y && \
     apt install -y python3 python3-pip python3-venv && \
+    python3 -m pip install -U setuptools pip && \
     useradd -m -s /bin/bash stegoveritas && \
     mkdir -p /opt
 
