Sourcing venv in test

--- a/.github/workflows/unit_tests.yml
+++ b/.github/workflows/unit_tests.yml
@@ -22,6 +22,6 @@ jobs:
 
         - name: Run tests
           run: |
-              docker run -i --rm -e TRAVIS_BRANCH=$TRAVIS_BRANCH bannsec/stegoveritas bash -c 'cd /opt/stegoveritas && pytest tests && if [ ! -z "$COVERALLS_REPO_TOKEN" ]; then coveralls; fi'
+              docker run -i --rm -e TRAVIS_BRANCH=$TRAVIS_BRANCH bannsec/stegoveritas bash -c 'source /opt/stegoveritas_venv/bin/activate; cd /opt/stegoveritas && pytest tests && if [ ! -z "$COVERALLS_REPO_TOKEN" ]; then coveralls; fi'
 
 # https://github.com/marketplace/actions/build-and-push-docker-images
