--- a/Dockerfile.fedora
+++ b/Dockerfile.fedora
@@ -1,15 +1,21 @@
 FROM fedora:latest
+SHELL ["/bin/bash", "-c"]
 
 RUN yum update -y && \
-    yum install -y python3 python3-pip && \
+    yum install -y python3 python3-pip python3-virtualenv && \
+    python3 -m venv /opt/stegoveritas_venv && \
+    source /opt/stegoveritas_venv/bin/activate && \
     python3 -m pip install -U setuptools pip && \
     useradd -m -s /bin/bash stegoveritas && \
     mkdir -p /opt
 
 COPY --chown=stegoveritas:stegoveritas . /opt/stegoveritas/
 
-RUN cd /opt/stegoveritas && pip3 install -e .[dev] && \
-    stegoveritas_install_deps
+RUN source /opt/stegoveritas_venv/bin/activate && \
+    cd /opt/stegoveritas && pip3 install -e .[dev] && \
+    stegoveritas_install_deps && \
+    echo "source /opt/stegoveritas_venv/bin/activate" >> /home/stegoveritas/.bashrc && \
+    chown -R stegoveritas:stegoveritas /opt/stegoveritas_venv
 
 WORKDIR /home/stegoveritas
 USER stegoveritas
