--- a/.github/workflows/unit_tests.yml
+++ b/.github/workflows/unit_tests.yml
@@ -23,4 +23,20 @@ jobs:
           run: |
               docker run -i --rm -e TRAVIS_BRANCH=$TRAVIS_BRANCH bannsec/stegoveritas bash -c 'source /opt/stegoveritas_venv/bin/activate; cd /opt/stegoveritas && pytest tests && if [ ! -z "$COVERALLS_REPO_TOKEN" ]; then coveralls; fi'
 
+  macos:
+    name: macOS
+    runs-on: macos-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v2
+      - name: Install dependencies
+        run: |
+          python -m venv env
+          source env/bin/activate
+          pip install -e .[dev]
+          stegoveritas_install_deps
+      - name: Run tests
+        run: |
+          pytest tests
+
 # https://github.com/marketplace/actions/build-and-push-docker-images
