--- a/.github/workflows/unit_tests.yml
+++ b/.github/workflows/unit_tests.yml
@@ -33,6 +33,10 @@ jobs:
           pip3 install virtualenv
       - name: Checkout code
         uses: actions/checkout@v2
+      - name: Debug Shell
+        uses: lhotari/action-upterm@v1
+        with:
+          limit-access-to-actor: true
       - name: Install dependencies
         run: |
           python3 -m venv env
