--- a/.github/workflows/unit_tests.yml
+++ b/.github/workflows/unit_tests.yml
@@ -26,9 +26,10 @@ jobs:
   macos:
     name: macOS
     runs-on: macos-latest
-    env:
-      PATH: $PATH:/opt/local/bin
     steps:
+      - name: Update PATH
+        run: |
+          echo "$PATH:/opt/local/bin" >> $GITHUB_PATH
       - name: Install Python3 and pip/virtualenv
         run: |
           brew install python3 wget
