--- a/.github/workflows/unit_tests.yml
+++ b/.github/workflows/unit_tests.yml
@@ -23,4 +23,37 @@ jobs:
           run: |
               docker run -i --rm -e TRAVIS_BRANCH=$TRAVIS_BRANCH bannsec/stegoveritas bash -c 'source /opt/stegoveritas_venv/bin/activate; cd /opt/stegoveritas && pytest tests && if [ ! -z "$COVERALLS_REPO_TOKEN" ]; then coveralls; fi'
 
+  macos:
+    name: macOS
+    runs-on: macos-latest
+    steps:
+      - name: Update PATH
+        run: |
+          echo "$PATH:/opt/local/bin" >> $GITHUB_PATH
+      - name: Install Python3 and pip/virtualenv
+        run: |
+          brew install python3 wget
+          pip3 install virtualenv
+      - name: Install MacPorts
+        run: |
+          wget -O macports.pkg https://github.com/macports/macports-base/releases/download/v2.8.1/MacPorts-2.8.1-12-Monterey.pkg
+          sudo installer -pkg ./macports.pkg -target /
+          sudo port selfupdate
+      - name: Checkout code
+        uses: actions/checkout@v2
+      #- name: Debug Shell
+      #  uses: lhotari/action-upterm@v1
+      #  with:
+      #    limit-access-to-actor: true
+      - name: Install dependencies
+        run: |
+          python3 -m venv env
+          source env/bin/activate
+          pip3 install -e .[dev]
+          stegoveritas_install_deps
+      - name: Run tests
+        run: |
+          source env/bin/activate
+          pytest tests
+
 # https://github.com/marketplace/actions/build-and-push-docker-images
